 ** Icon Hidden Time
 * New setting for Buff/Debuff icons: Hide if no units.
 * Added Challenge Mode and 40 Player raid to the Instance Type condition.
 * The Totem icon type has been re-focused towards the Rune of Power talent for mages.
 * The Buff Efficiency Threshold setting is back.
 * Changed all file encodings to UTF-8 in hopes of fixing the loading problems that many users are having.
 * Bug fixes:
 ** Minimum group frame level is now 5 instead of 1 to prevent issues caused at low frame levels.
 ** Increased the delay on LoadFirstValidIcon from 0.1 seconds to 0.5 seconds in hopes of preventing the AceCD:804 error more often.
 ** Soul shard condition maximum has been increased to 4 (from 3).
 ** The lightwell icon type should now work properly with the Lightspring glyph.
 ** Tried again to fix the AceCD:804 error. Probably didn't succeed.
 ** Fixed an incorrect spellID for Spirit Beast Blessing in the IncreasedMastery equivalency.
 ** Groups should now properly show/hide as needed when you change between primary/secondary talents specializations when both specializations are the same.
 ** Condition Object Constructors are now much more reliable (at the cost of some garbage churn when running TMW:Update())
 ** Fix attempted for GroupModule_GroupPosition\Config.lua line 47: attempt to index local 'Module' (a nil value)
 ** IncreasedStats should now properly include Legacy of the Emperor
 ** Fixed Components\IconTypes\IconType_unitcooldown\unitcooldown.lua:317 attempt to index local 'NameHash' (a boolean value)
 ** Fixed Components\IconModules\IconModule_PowerBar\PowerBar.lua:128 attempt to index local 'colorinfo' (a nil value)
 ** Fixed Components\IconModules\IconModule_Alpha\Alpha.lua:96 attempt to compare nil with number
 ** The "Show Timer Text" option now works with ElvUI
 ** Fixed TellMeWhen: Condition MELEEAP tried to write values to Env different than those that were already in it.